--- a/application/frontend/src/app/home/home.component.html
+++ b/application/frontend/src/app/home/home.component.html
@@ -1,10 +1,27 @@
-<div class="homeContainer">
-  <h2 class="homeTitle">Home Page</h2>
-  <p class="homeParagraph">
-    Welcome to the home page of the Payment Transactions App! <br><br>
-    In the <b>"Incoming Transactions"</b> page, you can see all saved transactions where you are the creditor.<br><br>
-    Similarly, the <b>"Outgoing Transactions"</b> page will show you all transactions where you are the debtor.<br><br>
-    In the <b>"Add Transaction"</b> page, you can fill out a form to add a new transaction.<br><br>
-    You will need to log in to access these pages. If you are not logged in, you will be redirected to the login page.<br>
-  </p>
+<div class="home-wrapper">
+  <div class="home-card">
+    <h2 class="home-title">Welcome to Payment Transactions App</h2>
+
+    <div class="home-content">
+      <p class="intro-text">
+        This application simulates a payment transaction system. Here is what you can do:
+      </p>
+
+      <ul class="feature-list">
+        <li>
+          <strong>Incoming Transactions:</strong> View all saved transactions where you are the creditor.
+        </li>
+        <li>
+          <strong>Outgoing Transactions:</strong> View all transactions where you are the debtor.
+        </li>
+        <li>
+          <strong>Add Transaction:</strong> Fill out a form to create a new transaction.
+        </li>
+      </ul>
+
+      <p class="login-note">
+        <i>Note: You must be logged in to access these features. Secure login is required.</i>
+      </p>
+    </div>
+  </div>
 </div>
