--- a/application/frontend/src/styles.scss
+++ b/application/frontend/src/styles.scss
@@ -42,6 +42,8 @@ body {
   /*background-image:  radial-gradient(#444cf7 1.05px, transparent 1.05px), radial-gradient(#444cf7 1.05px, #e5e5f7 1.05px);*/
   /*background-size: 42px 42px;*/
   /*background-position: 0 0,21px 21px;*/
+  margin: 0;
+  padding: 0;
 }
 
 p{
