--- a/application/frontend/src/app/app.component.css
+++ b/application/frontend/src/app/app.component.css
@@ -8,57 +8,66 @@ mat-toolbar {
   left: 0;
   width: 100%;
   z-index: 2;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
-
-/*.sidenav{*/
-/*  background-image: url('../cash.png');*/
-/*  background-size: 380%;*/
-/*  background-repeat: repeat;*/
-/*}*/
 
 .spacer {
   flex: 1 1 auto;
 }
 
 mat-sidenav {
-  width: 300px;
-  background-color: darkslategrey;
-  color: darkslategrey;
+  width: 250px;
+  background-color: #263238; /* Material Blue Grey 900 */
+  color: #eceff1;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.2);
 }
 
 mat-sidenav-content {
-  padding: 40px 20px; /* Adjust for toolbar height */
+  padding-top: 80px; /* Adjust for toolbar height */
+  padding-left: 20px;
+  padding-right: 20px;
   background: #f4f4f9;
   min-height: 100vh;
 }
 
-mat-nav-list mat-list-item {
-  padding: 50px 20px;
+/* New styling for navigation links */
+mat-nav-list a[mat-list-item] {
+  height: 60px !important; /* Increase height for comfortable clicking */
+  color: white !important;
+  transition: background-color 0.2s, color 0.2s;
 }
 
-.navItems{
-  margin-top: 45px;
-
+/* Target internal Angular Material text elements */
+mat-nav-list a[mat-list-item] ::ng-deep .mdc-list-item__primary-text {
+  color: white !important;
 }
 
-.itemText{
-  font-size: 20px;
-  /*font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;*/
+mat-nav-list a[mat-list-item]:hover {
+  background-color: #37474f; /* Lighter shade on hover */
+  color: #80cbc4 !important; /* Accent color on text hover */
 }
 
-mat-nav-list mat-list-item a {
+mat-nav-list a[mat-list-item]:hover ::ng-deep .mdc-list-item__primary-text {
+  color: #80cbc4 !important;
+}
+
+/* Active link styling (optional, requires routerLinkActive in HTML but strictly for hover requested) */
+
+.navItems {
+  margin-top: 55px;
+}
+
+.itemText {
+  font-size: 16px;
+  font-weight: 400;
   color: white;
 }
 
-mat-nav-list mat-list-item a:hover {
-  background-color: #74777f;
-  border-radius: 3px;
-  color: white;
+/* Logout specific tweak if needed, but keeping font uniform */
+.logout-text {
+  cursor: pointer;
 }
 
-.logout-item .itemText {
-  text-align: center;
-  font-weight: bolder;
-  color: red;
-  text-shadow: 2px 2px 2px black;
+mat-divider {
+  border-top-color: rgba(255, 255, 255, 0.1);
 }
